<resources>
    <string name="app_name">Family Gathering</string>
    <string name="disconnectFeat">Disconnect</string>
    <string name="connectFeat">Connect</string>
    <string name="startFeat">Play</string>
    <string name="title_activity_start_screen" translatable="false">StartScreen</string>
    <string name="phoneNumberInput">Other player\s phone no.</string>
    <string name="sendAction">Send</string>
    <string name="guessInput">Type your guess.</string>
    <string name="topicButton">Topic!</string>
    <string name="guessChat">Guess!</string>
    <string name="categoryInstructions">Choose A Category!</string>
    <string name="animal">Animals</string>
    <string name="goals">Goals</string>
    <string name="family">Family</string>
    <string name="feelings">Feelings</string>
    <string name="backButtonFromChatToMain">Back</string>
    <string name="instructions">In this game, you are given topics to re-enact to the other person via live video feed. The oldest gets to start. The other
    player will guess by inputting a guess. The guess will be sent back to you translated to whatever language you chose. If that player guessed correctly,
    let them know via chat. Let the other person act out the same topic, but this time, you have to guess. If both of you were able to guess
    what each of you were acting out, go to the next topic. There is a progress bar in which it will let you know how many you have guessed.
    Once it is filled. the game is over.</string>

    <string-array name="languages">
        <item>Choose A Language</item>
        <item>日本語</item>
        <item>English</item>
        <item>Español</item>
        <item>한국어</item>
    </string-array>

    <string name="instructionsButton">Instructions</string>
    <string name="unveilButton">Unveil the Question!</string>
    <string name="nextQ">Next Question!</string>
    <string name="nextPage">Next</string>

    <string-array name="topics">
        <item>Choose a category!</item>
        <item>Animals</item>
        <item>Family</item>
        <item>Feelings</item>
        <item>Goals</item>
        <item>Movies</item>
    </string-array>

    <string-array name="animalTopics">
        <item>What type of pet do you have?</item>
        <item>What is your favorite animal?</item>
        <item>What is your least favorite animal?</item>
        <item>What animal do you think you relate to?</item>
        <item>What type of pet would you want to have?</item>
    </string-array>

    <string-array name="feelingTopics">
        <item>What are you scared of?</item>
        <item>What activity makes you happy?</item>
        <item>What are you excited about for the upcoming week?</item>
        <item>What fictional place would you most like to go?</item>
        <item>What job do you think would you be terrible at?</item>
        <item>What is something that irks you?</item>
        <item>What is the most boring activity you can think of?</item>
        <item>What type of food do you like? (Spicy, sour etc)</item>
    </string-array>

    <string-array name="goalTopics">
        <item>What did you want to be when you grow up?</item>
        <item>What will be your New Year’s resolution?</item>
        <item>If you were to learn a new skill, what would it be?</item>
        <item>What is something you need to improve on?</item>
        <item>What kind of sports do you wish you were good at?</item>
        <item>What superpower would you want to have?</item>
        <item>What is something you do to destress yourself?</item>
    </string-array>

    <string-array name="movieTopics">
        <item>What is your favorite type of movie?</item>
        <item>What is your least favorite type of movie?</item>
        <item>What was the last movie you watched in theaters?</item>
    </string-array>

    <string-array name="familyTopics">
        <item>Who is your least favorite person in your family?</item>
        <item>Who is someone you look up to in your family?</item>
        <item>What are you studying in college?</item>
        <item>What is your talent?</item>
    </string-array>

    <string name="d2">First, choose a language</string>
    <string name="doneWithInstructions">Done</string>

    <string name="tap">Tap "Connect" to start live video feed to act out the questions.</string>
    <string name="disTap">Tapping this will disconnect you from the other player.</string>
    <string name="langDemo">Here is the log. The first entry in the response translated in the language we chose. The bottom one is the original message sent from the other player.</string>
    <string name="catMess">After you start, you must pick a category. Both players must have the same category.</string>
</resources>
