<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain"
    tools:context="com.example.janelynncamingue.againvid.MainActivity">


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="Start"
        android:text="@string/connectFeat" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Disconnect"
        android:text="@string/disconnectFeat"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <FrameLayout
        android:id="@+id/videoFrame"
        android:layout_width="370dp"
        android:layout_height="160dp"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

    </FrameLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/phone"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="18dp"
        android:layout_toStartOf="@+id/send"
        android:background="@color/colorAccent"
        android:visibility="visible" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/categories"
        android:layout_marginTop="21dp"
        android:background="@color/secondLightestTeal"
        android:ems="10"
        android:hint="@string/phoneNumberInput"
        android:inputType="number" />

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/messages"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:background="@color/secondLightestTeal"
        android:ems="10"
        android:hint="@string/guessInput"
        android:singleLine="false"
        android:visibility="visible" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="0dp"
        android:onClick="onSendClick"
        android:text="@string/sendAction"
        android:layout_alignBaseline="@+id/input"
        android:layout_alignBottom="@+id/input"
        android:layout_toEndOf="@+id/input" />

    <ListView
        android:id="@+id/messages"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_alignStart="@+id/input"
        android:layout_centerVertical="true"
        android:layout_weight="0.57"
        android:background="@color/lightestTeal"
        android:footerDividersEnabled="false" />

    <Button
        android:id="@+id/back_To_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp"
        android:onClick="backToStart"
        android:text="@string/backButtonFromChatToMain" />

    <ProgressBar
        android:id="@+id/progression"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="150"/>

    <Button
        android:id="@+id/nextTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/unveil"
        android:layout_alignBottom="@+id/unveil"
        android:layout_alignEnd="@+id/button3"
        android:onClick="updateProgression"
        android:text="@string/nextQ" />

    <Spinner
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/input"
        android:layout_below="@+id/progression"
        android:background="@color/colorSkin"
        android:entries="@array/topics" />

    <Button
        android:id="@+id/unveil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv"
        android:layout_alignBottom="@+id/tv"
        android:layout_alignEnd="@+id/nextTopic"
        android:onClick="unveilBtn"
        android:text="@string/unveilButton"
        android:visibility="visible" />

</RelativeLayout>
