<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain">


    <ImageView
        android:id="@+id/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        app:srcCompat="@drawable/one"
        tools:ignore="UnknownIdInLayout" />

    <Button
        android:id="@+id/toPage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="toIn3"
        android:text="@string/nextPage" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="64dp"
        app:srcCompat="@drawable/uparrow" />

    <TextView
        android:id="@+id/firstStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="50dp"
        android:text="@string/d2"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/firstPageMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstStep"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/imageView2"
        android:background="@color/colorAccent"
        android:text="@string/catMess" />

</RelativeLayout>